added valid links

--- a/startbootstrap-business-frontpage/index.html
+++ b/startbootstrap-business-frontpage/index.html
@@ -39,22 +39,22 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="services/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Quotes</a>
+              <a class="nav-link" href="quotes/quotes.html">Quotes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Parts Search</a>
+              <a class="nav-link" href="parts_search/parts_search.html">Parts Search</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ceritifications</a>
+              <a class="nav-link" href="certifications/certs.html">Ceritifications</a>
             </li>
           </ul>
         </div>
