--- a/startbootstrap-business-frontpage/about/about.html
+++ b/startbootstrap-business-frontpage/about/about.html
@@ -39,7 +39,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about/about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../services/services.html">Services</a>
