--- a/startbootstrap-business-frontpage/index.html
+++ b/startbootstrap-business-frontpage/index.html
@@ -109,7 +109,7 @@
       <div class="row">
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="duct1.jpg" alt="">
+            <img class="card-img-top" src="images/duct1.jpg" alt="">
             <!-- <div class="card-body">
               <h4 class="card-title">Get a Quote</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="plenum.jpg" alt="">
+            <img class="card-img-top" src="images/plenum.jpg" alt="">
             <!-- <div class="card-body">
               <h4 class="card-title">Search Parts</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="flame.jpg" alt="">
+            <img class="card-img-top" src="images/flame.jpg" alt="">
            <!--  <div class="card-body">
               <h4 class="card-title">Contact Us</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
@@ -153,7 +153,7 @@
     <!-- Footer -->
     <footer class="py-2 bg-dark">
       <div class="container">
-        <img class="centering-class" src="logo-transparent2.png">
+        <img class="centering-class" src="images/logo-transparent2.png">
         <p class="m-0 text-center text-white">24/7 AOG Hotline: 214-755-1554</p>
       </div>
       <!-- /.container -->
